Adding LWC integration with the enhanced conversation and the sentiment analysis prompt

--- a/force-app/main/default/lwc/customerSentiment/customerSentiment.html
+++ b/force-app/main/default/lwc/customerSentiment/customerSentiment.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Sentimento do Cliente" icon-name="utility:emoji">
+    <lightning-card title="Sentiment Analysis" icon-name="custom:custom97">
         <div class="slds-p-around_medium">
             <div class="slds-m-bottom_small">
                 <span class="slds-badge" style={badgeStyle}>{sentiment}</span>
